Creación de la interfaz de Ordenes (general)

--- a/LabWebAppBlazor/Components/Layout/NavMenu.razor
+++ b/LabWebAppBlazor/Components/Layout/NavMenu.razor
@@ -9,6 +9,11 @@
 <div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
     <nav class="flex-column">
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="registrar-usuario">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Registrar Usuarios
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="home" Match="NavLinkMatch.All">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
@@ -21,10 +26,11 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="registrar-usuario">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Módulo 2
+            <NavLink class="nav-link" href="ordenes" Match="NavLinkMatch.All">
+                <span class="bi bi-list-nested-nav-menu oi oi-people" aria-hidden="true"></span> Ordenes
             </NavLink>
         </div>
+        
     </nav>
 </div>
 
