--- a/LabWebAppBlazor/Components/Pages/RedirectToLogin.razor
+++ b/LabWebAppBlazor/Components/Pages/RedirectToLogin.razor
@@ -3,6 +3,7 @@
 @code {
     protected override void OnInitialized()
     {
-        Navigation.NavigateTo("/login", true);
+        var returnUrl = Uri.EscapeDataString(Navigation.ToBaseRelativePath(Navigation.Uri));
+        Navigation.NavigateTo($"/login?ReturnUrl={returnUrl}", forceLoad: true);
     }
 }
