--- a/LabWebAppBlazor/Components/Routes.razor
+++ b/LabWebAppBlazor/Components/Routes.razor
@@ -41,16 +41,16 @@
 @code {
     private bool _isAuthenticated;
 
-    // protected override async Task OnInitializedAsync()
-    // {
-    //     var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
-    //     _isAuthenticated = authState.User.Identity?.IsAuthenticated ?? false;
-    // }
+    protected override async Task OnInitializedAsync()
+    {
+        var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
+        _isAuthenticated = authState.User.Identity?.IsAuthenticated ?? false;
+    }
 
     private Type GetLayout(RouteData routeData)
     {
         var pageType = routeData.PageType;
-        if (pageType == typeof(Login)) // Usa el nombre real del componente Login
+        if (pageType == typeof(Login)) // Asegúrate que "Login" esté correctamente importado
         {
             return typeof(EmptyLayout);
         }
