Generacion de la primera parte del ingreso de la orden: busqueda de paciente dentro de la orden

--- a/LabWebAppBlazor/Components/Pages/CambiarContraseña.razor
+++ b/LabWebAppBlazor/Components/Pages/CambiarContraseña.razor
@@ -54,7 +54,7 @@
         if (resultado.IsSuccessStatusCode)
         {
             await JS.InvokeVoidAsync("alert", "Contraseña actualizada.");
-            Navigation.NavigateTo("/pacientes", forceLoad: true);
+            Navigation.NavigateTo("/home", forceLoad: true);
         }
         else
         {
