--- a/LabWebAppBlazor/Components/Layout/NavMenu.razor
+++ b/LabWebAppBlazor/Components/Layout/NavMenu.razor
@@ -28,11 +28,22 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="examenes" Match="NavLinkMatch.All">
+                <span class="bi bi-list-nested-nav-menu oi oi-people" aria-hidden="true"></span> Exámenes
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="ordenes" Match="NavLinkMatch.All">
                 <span class="bi bi-list-nested-nav-menu oi oi-people" aria-hidden="true"></span> Ordenes
             </NavLink>
         </div>
         
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="cxc" Match="NavLinkMatch.All"> @* ojoo cambiar pa la CXC *@
+                <span class="bi bi-list-nested-nav-menu oi oi-people" aria-hidden="true"></span> Cuentas por Cobrar
+            </NavLink>
+        </div>
     </nav>
 </div>
 
